Fixed travis compilation.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
 language: cpp
+compiler: g++
 
 install:
   - sudo apt-add-repository -y "deb http://archive.ubuntu.com/ubuntu/ trusty main restricted universe"
   - sudo apt-get update     -y -qq
   - sudo apt-get install    -y -qq cmake
-  - sudo apt-get install    -y -qq ninja
   - sudo apt-get install    -y -qq g++-4.8
   - sudo apt-get install    -y -qq cppcheck
   - sudo apt-get install    -y -qq libboost-all-dev
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
-  - wget https://github.com/nicuveo/NPL/archive/master.zip && unzip master.zip && cd NPL-master && sudo make install && cd ..
+  - wget https://github.com/nicuveo/NPL/archive/master.zip && unzip master.zip && cd NPL-master && cmake -DCMAKE_BUILD_TYPE=release && sudo make install && cd ..
 
-script: make check && make flower # :)
+script: cmake -DCMAKE_BUILD_TYPE=release && make check && make flower # :)
 after_failure: cat build/debug/*.log
