--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: cpp
 compiler: g++
 
 install:
+  - gem install coveralls-lcov
   - sudo apt-add-repository -y "deb http://archive.ubuntu.com/ubuntu/ trusty main restricted universe"
   - sudo apt-get update     -y -qq
   - sudo apt-get install    -y -qq cmake
@@ -11,5 +12,7 @@ install:
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
   - wget https://github.com/nicuveo/NPL/archive/master.zip && unzip master.zip && cd NPL-master && cmake -DCMAKE_BUILD_TYPE=release && sudo make install && cd ..
 
-script: cmake -DCMAKE_BUILD_TYPE=release && make check && make flower # :)
+script: cmake -DCMAKE_BUILD_TYPE=debug && make check && make flower # :)
+
 after_failure: cat build/debug/*.log
+after_success: coveralls-lcov coverage.info
