--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,18 @@ compiler: g++
 
 install:
   - gem install coveralls-lcov
-  - sudo apt-add-repository -y "deb http://archive.ubuntu.com/ubuntu/ trusty main restricted universe"
-  - sudo apt-get update     -y -qq
-  - sudo apt-get install    -y -qq cmake
-  - sudo apt-get install    -y -qq g++-4.8
-  - sudo apt-get install    -y -qq cppcheck
-  - sudo apt-get install    -y -qq libboost-all-dev
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
+  - sudo apt-add-repository  -y "deb http://archive.ubuntu.com/ubuntu/ trusty main restricted universe"
+  - sudo apt-get update  -qq -y
+  - sudo apt-get install -qq -y lcov
+  - sudo apt-get install -qq -y cmake
+  - sudo apt-get install -qq -y g++-4.8
+  - sudo apt-get install -qq -y cppcheck
+  - sudo apt-get install -qq -y libboost-all-dev
+  - sudo update-alternatives --install /usr/bin/g++  g++  /usr/bin/g++-4.8  90
+  - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-4.8 90
   - wget https://github.com/nicuveo/NPL/archive/master.zip && unzip master.zip && cd NPL-master && cmake -DCMAKE_BUILD_TYPE=release && sudo make install && cd ..
 
 script: cmake -DCMAKE_BUILD_TYPE=debug && make check && make flower # :)
 
-after_failure: cat build/debug/*.log
 after_success: coveralls-lcov coverage.info
+after_failure: cat *.log
